syntax = "proto3";

import "cliente/def/cliente.proto";
import "cardapio/def/cardapio.proto";
import "checkoutdef/def/checkoutdef.proto";
import "google/protobuf/timestamp.proto";

package pedido.def;

enum StatusPedido {
    UNSPECIFIED = 0;
    RECEBIDO = 1;
    PREPARANDO = 2;
    PRONTO = 3;
    FINALIZADO = 4;
}

message IItemPedido {
    string nome = 1;
    uint32 quantidade = 2;
    string preco = 3;
}

message IPedido {
    repeated IItemPedido item = 1;
}

message IPedidoTotal {
    IPedido pedido = 1;
    optional cliente.def.ICliente cliente = 2;
}

message IItemPedidoProtocolado {
    string id = 1;
    uint32 quantidade = 2;
    cardapio.def.IItemCardapio item = 3;
    google.protobuf.Timestamp created_at = 4;
}

message IPedidoTotalProtocolado {
    string id = 1;
    repeated IItemPedido item_pedido = 2;
    cliente.def.ICliente cliente = 3;
    google.protobuf.Timestamp created_at = 4;
}

message IPedidoProtocolado {
    string id = 1;
    cliente.def.ICliente cliente = 2;
    repeated IItemPedidoProtocolado pedido = 3;
    StatusPedido status = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp received_at = 6;
    google.protobuf.Timestamp prepared_at = 7;
    google.protobuf.Timestamp done_at = 8;
    checkoutdef.def.PaymentGateway payment_gateway = 9;
    checkoutdef.def.PaymentMethods payment_method = 10;
    checkoutdef.def.PaymentStatus payment_status = 11;
}