import {
    StatusPedido,
    statusPedidoFromJSON, 
    IItemPedido,
    IPedidoTotal,
    IItemPedidoProtocolado,
    IPedidoProtocolado,
    IPedidoTotalProtocolado,

} from "../../../../../protobuf/gen/pedido/def/pedido";

export {
    StatusPedido,
    statusPedidoFromJSON,
    IItemPedido,
    IPedidoTotal,
    IItemPedidoProtocolado,
    IPedidoProtocolado,
    IPedidoTotalProtocolado
};